src/client/k8s/base/11-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vihatoncom
  name: vihatoncom
  namespace: vihatoncom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vihatoncom
  template:
    metadata:
      labels:
        app: vihatoncom
    spec:
      containers:
      - image: eu.gcr.io/vihaton/vihatoncom:0.1.3
        name: vihatoncom
        ports:
          - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 1000m
            memory: 1000Mi        
      securityContext: {}
      terminationGracePeriodSeconds: 30
