src/client/k8s/base/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: vihatoncom
  name: vihatoncom-service
spec:
  type: LoadBalancer
  selector:
    app: vihatoncom
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
